<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_game_level_format">Level %1$d</string>
    <string name="feature_game_pause">Pause</string>
    <string name="feature_game_remaining_format">%1$d cars remaining</string>
    <string name="feature_game_remaining_short_format">%1$d left</string>
    <string name="feature_game_resume">Resume</string>
    <string name="feature_game_exit_game">Home</string>
    <string name="feature_game_paused_title">Game Paused</string>
    <string name="feature_game_result_title">Level Complete!</string>
    <string name="feature_game_failure_title">Level Failed</string>
    <string name="feature_game_failure_message">The temporary parking area is full. Try changing the vehicle color order.</string>
    <string name="feature_game_stars_format">%1$d stars earned</string>
    <string name="feature_game_next_level">Next Level</string>
    <string name="feature_game_finish_slice">Home</string>
    <string name="feature_game_retry">Reload</string>
    <string name="feature_game_error">This level is temporarily unavailable</string>
    <string name="feature_game_vehicle_accessibility_format">%1$s vehicle facing %2$s. Double tap to move.</string>
    <string name="feature_game_vehicle_accessibility_locked_format">%1$s vehicle facing %2$s, locked</string>
    <string name="feature_game_vehicle_direction_up">up</string>
    <string name="feature_game_vehicle_direction_right">right</string>
    <string name="feature_game_vehicle_direction_down">down</string>
    <string name="feature_game_vehicle_direction_left">left</string>
    <string name="feature_game_vehicle_unavailable">Vehicle has left</string>
    <string name="feature_game_current_order">Current</string>
    <string name="feature_game_next_order">Next</string>
    <string name="feature_game_later_order">Later</string>
    <string name="feature_game_all_orders_complete">All color orders completed</string>
    <string name="feature_game_order_progress_format">%1$d / %2$d</string>
    <string name="feature_game_order_accessibility_format">Current %1$s order: %2$d of %3$d completed</string>
    <string name="feature_game_upcoming_order_accessibility_format">Upcoming %1$s order: %2$d vehicles</string>
    <string name="feature_game_parking_lot">Temporary Parking</string>
    <string name="feature_game_parking_capacity_format">%1$d / %2$d</string>
    <string name="feature_game_parking_last_slot">1 space left</string>
    <string name="feature_game_parking_full">Full</string>
    <string name="feature_game_parking_accessibility_format">Temporary parking: %1$d of %2$d spaces occupied; %3$s</string>
    <string name="feature_game_parking_empty_accessibility">All spaces are empty</string>
    <string name="feature_game_parking_color_count_format">%1$s: %2$d</string>
    <string name="feature_game_color_coral">coral</string>
    <string name="feature_game_color_blue">blue</string>
    <string name="feature_game_color_yellow">yellow</string>
    <string name="feature_game_color_purple">purple</string>
    <string name="feature_game_color_mint">mint</string>
    <string name="feature_game_color_red">red</string>
    <string name="feature_game_home_title">Parking Escape</string>
    <string name="feature_game_home_level_format">Continue Level %1$d</string>
    <string name="feature_game_home_progress_format">Main Progress %1$d / %2$d</string>
    <string name="feature_game_home_progress_short_format">%1$d / %2$d</string>
    <string name="feature_game_home_progress_accessibility">Main progress %1$d of %2$d, stars %3$d of %4$d</string>
    <string name="feature_game_home_star_progress_accessibility">Star progress %1$d of %2$d</string>
    <string name="feature_game_home_next">Next Level</string>
    <string name="feature_game_home_restart">Restart Level</string>
    <string name="feature_game_home_retry">Reload</string>
    <string name="feature_game_home_all_complete">All current levels completed</string>
    <string name="feature_game_home_chapter">District 1 · Sunny Block</string>
    <string name="feature_game_home_chapter_short">Sunny Block</string>
    <string name="feature_game_home_star_format">%1$d stars</string>
    <string name="feature_game_home_star_short_format">%1$d stars</string>
    <string name="feature_game_home_star_progress_short_format">%1$d / %2$d</string>
    <string name="feature_game_home_select_levels">Select Levels</string>
    <string name="feature_game_home_settings">Settings</string>
    <string name="feature_game_settings_title">Game Settings</string>
    <string name="feature_game_settings_back">Back to game home</string>
    <string name="feature_game_settings_language">Language</string>
    <string name="feature_game_settings_language_accessibility">Language, currently %1$s</string>
    <string name="feature_game_settings_feedback">Feedback</string>
    <string name="feature_game_settings_feedback_subtitle">Contact us by email</string>
    <string name="feature_game_settings_privacy">Privacy Policy</string>
    <string name="feature_game_settings_privacy_subtitle">View privacy and data details</string>
    <string name="feature_game_settings_version">Version</string>
    <string name="feature_game_settings_version_accessibility">Version %1$s</string>
</resources>
